# pronouner

./: Makefile  README.md  bad.py  pronouner.py  pyproject.toml
